--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <li><span>Freelance</span> : <span>Available</span></li>
                 </ul>
                 <div class="st-text-block-btn">
-                  <a href="https://drive.google.com/file/d/1_o_D06QZEqGilnI9umzGrUofAcOMOr7k/view?usp=drivesdk" target="_blank" class="st-btn st-style1 st-color1">Download CV</a>
+                  <a href="https://drive.google.com/file/d/1A5AmouJxyN2L99BLpykMYGQG_8ysBAC5/view?usp=drive_link" target="_blank" class="st-btn st-style1 st-color1">Download CV</a>
                 </div>
               </div>
             </div>
