Updating the Experience section, Added the latest one
In this commit I have updated my experience section. I have updated the old one and added abount Infosys and Adjecti solution company details.

--- a/index.html
+++ b/index.html
@@ -274,35 +274,40 @@
 
             <div class="st-resume-timeline-wrap">
               <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Software Engineer Level 1</h3>
-                <div class="st-resume-timeline-duration">Feb 2023 - Present</div>
-                <h4 class="st-resume-timeline-subtitle">Softsages Technology, Noida</h4>
+                <h3 class="st-resume-timeline-title">Associate Consultant</h3>
+                <div class="st-resume-timeline-duration">Dec 2024 – Present</div>
+                <h4 class="st-resume-timeline-subtitle">Infosys Ltd. Pune, Maharashtra</h4>
                 <div class="st-resume-timeline-text">
-                  <p>• Developed and maintained scalable backend systems using Java and Spring Framework to handle data processing,
-                    business logic, and server-side functionalities.<br> • Implemented RESTful APIs to facilitate seamless communication between the frontend and backend components of
-                    the application.
-                    </p>
+                  <p>• Working on the Apple project as a Backend Java Developer, focusing on integrating and managing workflows using
+                    the Temporal Workflow framework.<br> • Building scalable microservices with Spring Boot and ensuring seamless communication across distributed systems.<br> 
+                    • Collaborating in Agile teams and contributing to sprint planning, code reviews, and deployment cycles.
+                  </p>
+                </div>
+              </div>
+              <div class="st-height-b50 st-height-lg-b30"></div>
+              <div class="st-resume-timeline">
+                <h3 class="st-resume-timeline-title">Full Stack Java Developer</h3>
+                <div class="st-resume-timeline-duration">June 2024 – Nov 2024</div>
+                <h4 class="st-resume-timeline-subtitle">Adjecti Solution Noida, Uttar Pradesh</h4>
+                <div class="st-resume-timeline-text">
+                  <p>• Developing and customizing Liferay portlets to enhance the functionality and user experience of the company’s
+                    intranet portal, while optimizing performance to ensure scalability for increasing user loads.<br> • Exploring and implementing various Liferay DXP features such as content management, user management, and
+                    workflow automation to streamline business processes.<br> • Implementing new technologies and taking on increased responsibilities in a dynamic work environment to support
+                    and improve business operations.
+                  </p>
                 </div>
               </div> <!-- st-resume-timeline -->
               <div class="st-height-b50 st-height-lg-b30"></div>
               <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Associate Software Engineer</h3>
-                <div class="st-resume-timeline-duration">Feb 2022 - feb 2023</div>
-                <h4 class="st-resume-timeline-subtitle">Softsages Technology, Noida</h4>
+                <h3 class="st-resume-timeline-title">Software Engineer</h3>
+                <div class="st-resume-timeline-duration">Feb 2022 – June 2024</div>
+                <h4 class="st-resume-timeline-subtitle">Softsages Technology Noida, Uttar Pradesh</h4>
                 <div class="st-resume-timeline-text">
-                  <p>• Contributed as a backend developer to the Mailzzy Application from Feb 2022 till present, utilizing Spring Boot, JPA,
-                    and PostgreSQL for backend development.
-                    </p>
-                </div>
-              </div> <!-- st-resume-timeline -->
-              <div class="st-height-b50 st-height-lg-b30"></div>
-              <div class="st-resume-timeline">
-                <h3 class="st-resume-timeline-title">Java developer Trainee</h3>
-                <div class="st-resume-timeline-duration">May 2021 - Aug 2021</div>
-                <h4 class="st-resume-timeline-subtitle">Codules Technology, Greater Noida</h4>
-                <div class="st-resume-timeline-text">
-                  <p>• Designed and implemented a Web Application to showcase vehicle insurance options. 
-                    Utilized Bootstrap, JSP, Servlets, JDBC, MySQL, and Apache Tomcat Server to deliver the application.</p>
+                  <p>• Developed and maintained scalable backend systems using Java and the Spring Framework to manage data
+                    processing, business logic, and server-side functionalities, ensuring robust performance and reliability.<br> • Designed and implemented RESTful APIs that facilitated seamless integration between frontend and backend
+                    components, optimizing performance and reducing latency by 30%, while conducting thorough testing and
+                    debugging to deliver a high-quality end product.
+                  </p>
                 </div>
               </div> <!-- st-resume-timeline -->
             </div>
