--- a/index.html
+++ b/index.html
@@ -279,8 +279,7 @@
                 <h4 class="st-resume-timeline-subtitle">Infosys Ltd. Pune, Maharashtra</h4>
                 <div class="st-resume-timeline-text">
                   <p>• Working on the Apple project as a Backend Java Developer, focusing on integrating and managing workflows using
-                    the Temporal Workflow framework.<br> • Building scalable microservices with Spring Boot and ensuring seamless communication across distributed systems.<br> 
-                    • Collaborating in Agile teams and contributing to sprint planning, code reviews, and deployment cycles.
+                    the Temporal Workflow framework.<br> • Building scalable microservices with Spring Boot and ensuring seamless communication across distributed systems.
                   </p>
                 </div>
               </div>
@@ -291,8 +290,7 @@
                 <h4 class="st-resume-timeline-subtitle">Adjecti Solution Noida, Uttar Pradesh</h4>
                 <div class="st-resume-timeline-text">
                   <p>• Developing and customizing Liferay portlets to enhance the functionality and user experience of the company’s
-                    intranet portal, while optimizing performance to ensure scalability for increasing user loads.<br> • Exploring and implementing various Liferay DXP features such as content management, user management, and
-                    workflow automation to streamline business processes.<br> • Implementing new technologies and taking on increased responsibilities in a dynamic work environment to support
+                    intranet portal, while optimizing performance to ensure scalability for increasing user loads.<br> • Implementing new technologies and taking on increased responsibilities in a dynamic work environment to support
                     and improve business operations.
                   </p>
                 </div>
@@ -305,8 +303,7 @@
                 <div class="st-resume-timeline-text">
                   <p>• Developed and maintained scalable backend systems using Java and the Spring Framework to manage data
                     processing, business logic, and server-side functionalities, ensuring robust performance and reliability.<br> • Designed and implemented RESTful APIs that facilitated seamless integration between frontend and backend
-                    components, optimizing performance and reducing latency by 30%, while conducting thorough testing and
-                    debugging to deliver a high-quality end product.
+                    components.
                   </p>
                 </div>
               </div> <!-- st-resume-timeline -->
