--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                   <li><span>Birthday</span> : <span>Oct 12, 2002</span></li>
                   <li><span>Phone</span> : <span>+91-6306732652</span></li>
                   <li><span>Email</span> : <span>abhichopan@gmail.com</span></li>
-                  <li><span>From</span> : <span>Amrapali Leisure Park, Noida - Uttar Pradesh</span></li>
+                  <li><span>From</span> : <span>Laxmi Chowk Hinzewadi, Phase 1 - Pune Maharastra</span></li>
                   <li><span>Language</span> : <span>English, Hindi</span></li>
                   <li><span>Freelance</span> : <span>Available</span></li>
                 </ul>
@@ -657,7 +657,7 @@
               <i class="fas fa-map-marker-alt"></i>
               <div class="st-single-info-details">
                 <h4>Address</h4>
-                <span>A6-403 Amrapali Leisure Park, <br>Greater Noida, 201009</span>
+                <span>Laxmi Chowk Hinzewadi, Phase 1, <br>Pune - Maharastra</span>
               </div>
             </div>
             <div class="st-social-info">
