Updated the resume/cv

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <li><span>Freelance</span> : <span>Available</span></li>
                 </ul>
                 <div class="st-text-block-btn">
-                  <a href="https://drive.google.com/file/d/1A5AmouJxyN2L99BLpykMYGQG_8ysBAC5/view?usp=drive_link" target="_blank" class="st-btn st-style1 st-color1">Download CV</a>
+                  <a href="https://drive.google.com/file/d/1KM1KtFGhU-ADMR31b_JEPMr0X1-9sA0r/view?usp=drive_link" target="_blank" class="st-btn st-style1 st-color1">Download CV</a>
                 </div>
               </div>
             </div>
@@ -642,7 +642,7 @@
               <div class="st-single-info-details">
                 <h4>Email</h4>
                 <a href="mailto:abhichopan@gmail.com">abhichopan@gmail.com</a>
-                <a href="mailto:vishu.kumar.akash@gmail.com">vishu.kumar.akash@gmail.com</a>
+                <a href="mailto:akash.kumar.vishu1210@gmail.com">akash.kumar.vishu1210@gmail.com</a>
               </div>
             </div>
             <div class="st-single-contact-info">
